# study

./: README.md
C++/labwork2/: CMakeLists.txt  README.md
C++/labwork2/lib/: number.cpp  number.h
C++/labwork2/tests/: number_test.cpp
C++/labwork3/: CMakeLists.txt
C++/labwork3/lib/: CMakeLists.txt  args_parser.cpp  args_parser.h  bmp.cpp  bmp.h  field.cpp  field.h  file_parser.cpp  file_parser.h  sand_simulator.cpp  sand_simulator.h
C++/labwork4/lib/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  ascii.cpp  ascii.h
C++/labwork4/tests/: CMakeLists.txt  argparser_test.cpp
C++/labwork5/lib/: CMakeLists.txt  commands_handler.cpp  commands_handler.h  sea_battle_bot.cpp  sea_battle_bot.h
C++/labwork6/: CMakeLists.txt
C++/labwork6/lib/: CMakeLists.txt
C++/labwork6/lib/ArgParser/: ArgParser.cpp  ArgParser.h  CMakeLists.txt
C++/labwork6/lib/CacheLib/: CMakeLists.txt  CacheLib.cpp  CacheLib.h
C++/labwork6/lib/TimeConverter/: CMakeLists.txt  TimeConverter.cpp  TimeConverter.h
C++/labwork6/lib/Wstr/: CMakeLists.txt  Wstr.cpp  Wstr.h
C++/labwork6/lib/YandexApi/: CMakeLists.txt  YandexApi.cpp  YandexApi.h
C++/labwork6/lib/tabulate/: CMakeLists.txt
digital_culture/Plugin for SublimeText/: LICENSE  README.md
digital_culture/Plugin for SublimeText/settings/: Context.sublime-menu  Main.sublime-menu  commands.json
digital_culture/Plugin for SublimeText/src/: converter.py
